# binpattern

./: .gitignore  Cargo.toml  README.md  README.rst
py/: binpattern.py
src/: main.rs
